--- a/package.json
+++ b/package.json
@@ -17,41 +17,42 @@
   "author": "Matthew Wolfe",
   "license": "MIT",
   "dependencies": {
-    "@emotion/cache": "^11.10.1",
-    "@emotion/react": "^11.10.0",
+    "@emotion/cache": "^11.10.8",
+    "@emotion/react": "^11.10.8",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@hookform/resolvers": "^2.9.7",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.93",
-    "@mui/material": "^5.9.3",
-    "next": "^12.2.4",
+    "@emotion/styled": "^11.10.8",
+    "@hookform/resolvers": "^3.1.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "5.0.0-alpha.128",
+    "@mui/material": "^5.12.2",
+    "next": "^13.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.0.0"
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.2.4",
+    "@next/bundle-analyzer": "^13.3.1",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@types/jest": "^28.1.6",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.21.0",
-    "eslint-config-next": "^12.2.4",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint": "^8.39.0",
+    "eslint-config-next": "^13.3.1",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^28.1.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "mv": "^2.1.1",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.0",
     "touch": "^3.1.0",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   }
 }
