--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "analyze": "cross-env ANALYZE=true next build",
     "rm-docs": "rimraf docs",
-    "build": "npm run rm-docs && next build",
+    "build": "npm run rm-docs && next build && node ./scripts/build.js",
     "dev": "next dev",
     "lint": "eslint \"**/*.{ts,tsx}\"",
     "start": "next start",
@@ -47,7 +47,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
     "mv": "^2.1.1",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
